# PongGame

./: .gitignore  CMakeLists.txt  README.md  configure.bat  run.bat
include/: print.h
src/: Game.cpp  Pong.cpp  Pong.h  main.cpp
src/ECS/: Components.h  Entity.h  System.h
src/ECS/SystemTypes/: SetupSystem.h
src/Game/: Game.cpp  Game.h
src/Pong/: Components.h  Pong.cpp  Pong.h  Systems.h
src/Scene/: Scene.cpp  Scene.h
